# api/docs/swagger.json
@@ -98,7 +98,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Activity"
+                                "$ref": "#/definitions/main.DossierActivities"
                             }
                         }
                     },
@@ -179,13 +179,36 @@
                 "description": {
                     "type": "string"
                 },
-                "dossier_id": {
-                    "type": "string"
-                },
                 "link": {
                     "type": "string"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.DossierActivities": {
+            "type": "object",
+            "properties": {
+                "activities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.Activity"
+                    }
+                },
+                "dossier_authors": {
+                    "type": "string"
+                },
+                "dossier_content": {
+                    "type": "string"
+                },
+                "dossier_id": {
+                    "type": "string"
+                },
+                "dossier_name": {
+                    "type": "string"
+                },
+                "dossier_status": {
                     "type": "string"
                 }
             }
